[package]
name = "ghostvpn"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
log4rs = "1"
log = "0.4"
rust-crypto = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
smoltcp = { version = "0.8", default-features = false, features = ["proto-ipv4"] }
rand = "0.8"
socket2 = "0.4"
parking_lot = "0.11"
anyhow = "1"
mimalloc = { version = "*", default-features = false }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
tun = { git = "https://github.com/meh/rust-tun.git", branch = "master" }

[profile.release]
lto = true
codegen-units = 1